Fix WooCommerce saved payment method radio button visibility (#834)

--- a/.dev/assets/shared/css/woocommerce/checkout.scss
+++ b/.dev/assets/shared/css/woocommerce/checkout.scss
@@ -8,6 +8,17 @@
 		margin-right: 0.5em !important;
 	}
 
+	.woocommerce-SavedPaymentMethods {
+
+		input[type="radio"] {
+			opacity: 1;
+		}
+
+		li::marker {
+			content: "";
+		}
+	}
+
 	#ship-to-different-address-checkbox {
 		position: relative;
 		top: 3px;
